# ScoutPlanner

./: README.md
pdf-backend/: Cargo.toml  Dockerfile
pdf-backend/src/: main.rs
pdf-backend/yaml/: backend-deploy.yaml
pdf-frontend/: Cargo.toml  Dockerfile  push_script.sh
pdf-frontend/src/: form.html  main.rs
pdf-frontend/yaml/: frontend-deploy.yaml
